--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="en-us">
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <title>SAFARI HANGMAN</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <script src="assets/javascript/game.js"></script>
 </head>
@@ -24,15 +22,15 @@
                             <h2 id="pressKeyTryAgain">Press Any Key to Try Again!</h2>
                         </div>
                         <div class"col-md-6">
-                            <h1 id="getStarted">Press Any Key to Get Started!</h1>
+                            <h1>Press Any Key to Get Started!</h1>
                             <h3>Wins</h3>
                             <h5 id="totalWins"></h5>
                             <h3>Current Word</h3>
                             <h5 id=currentWord></h5>
                             <h3>Guesses Remaining</h3>
-                            <h5 id="guesses"></h5>
+                            <h5 id="remainingGuesses"></h5>
                             <h3>Letters Guessed</h3>
-                            <h5 id="lettersGuessed"></h5> 
+                            <h5 id="guessedLetters"></h5> 
                         </div>
                     </div>
     </div>
@@ -41,12 +39,14 @@
     
     <script>
     
-    // resetgame();
-    // updatedisplay();
+    resetGame();
+    updateDisplay();
 
     </script>
 
-
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
 </body>
 </html>
